fix: reduced gap between images in the movie list on mobile screen

--- a/src/movies/movieCard/MovieCard.css
+++ b/src/movies/movieCard/MovieCard.css
@@ -103,7 +103,7 @@
   }
 }
 
-@media (max-width: 350px) {
+@media (max-width: 500px) {
   .movie-card {
     max-width: 136px;
     max-height: 230px;
